--- a/public/story.html
+++ b/public/story.html
@@ -13,7 +13,7 @@
   <script src = "js/record.js"></script>
 </head>
 <body>
-  <img id = "image"></div>
+  <div id = "image"></div>
   <audio id = "sound"></audio>
   <section id = "controls">
     <button id = "nextImage" class = "buttons">next image</button>
