--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
 
   <section id = "warning" class = "modal">
     <div class = "modalContent">
-      <p class = "warnInfo">This site uses session storage, by continuing you agree to its use<span id = "x">X</span><p>
-    <div>
-  <section>
+      <p class = "warnInfo">This site uses session storage, by continuing you agree to its use<span id = "x">X</span></p>
+    </div>
+  </section>
 
 </body>
 </html>
