--- a/public/story.html
+++ b/public/story.html
@@ -17,9 +17,9 @@
   <audio id = "sound"></audio>
   <section id = "controls">
     <button id = "nextImage" class = "buttons">next image</button>
-    <button id = "nextSound" class = "buttons">next song</button>
+    <button id = "nextSound" class = "buttons">next story</button>
     <button id = "record" class = "buttons">record story</button>
-    <button id = "mute" class = "buttons">pause song</button>
+    <button id = "mute" class = "buttons">pause story</button>
   <section>
   <button id = "home" class = "home">Logout</button>
   <p id = "response"></p>
