--- a/public/view.html
+++ b/public/view.html
@@ -23,7 +23,7 @@
     <p>Add new images:</p>
       <form action = "/addPic" enctype="multipart/form-data" method = "post">
       <input id = "picUpload" type = "file" name = "upload" multiple></input>
-      <input type = "submit" value="Upload" class = "buttons"></input>
+      <input id = "picButton" type = "submit" value="Upload" class = "buttons"></input>
     </form>
   </section>
 
